# simple_quant_strategies

./: 0_factor_strategy.ipynb  1_stat_arb_intro.ipynb  2_funding_rate.ipynb  README.md  main.py  momentum_BTCUSDT_1h.ipynb  pyproject.toml  sma_crossover.ipynb
