[project]
name = "simple-quant-strategies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ccxt>=4.5.6",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "seaborn>=0.13.2",
]
